# ishyango-desktop

./: .env  README.md  package-lock.json  package.json
.github/workflows/: tauri-release.yml
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  taxonomy.rs
src-tauri/.github/workflows/: tauri-release.yml
src-tauri/src/: db.rs  lib.rs  main.rs  taxonomy.rs
src/components/: CommitGalaxy3D.tsx  PDFViewer.tsx  Settings.tsx
src/lib/: qwen.ts  utils.ts
